updated erl link in desc

--- a/description.ipynb
+++ b/description.ipynb
@@ -27,7 +27,7 @@
     "<h2>Articles</h2>       \n",
     "<p>(1) Sgouridis, Csala, <a href=\"http://www.mdpi.com/2071-1050/6/5/2601\" target=\"_blank\" >A Framework for Defining Sustainable Energy Transitions: Principles, Dynamics, and Implications</a>, 2014, Sustainability<br/>\n",
     "(2) Sgouridis, Bardi, Csala, <a href=\"http://arxiv.org/abs/1503.06832\" target=\"_blank\" >A Net Energy-based Analysis for a Climate-constrained Sustainable Energy Transition</a>, 2015, preprint on arXiv<br/>\n",
-    "(3) Sgouridis, Csala, Bardi, <a href=\"http://arxiv.org/abs/1602.01203\" target=\"_blank\" >The Sower's way. Quantifying the Narrowing Net-Energy Pathways to a Global Energy Transition</a>, 2016, Env. Res. Let.</p>\n",
+    "(3) Sgouridis, Csala, Bardi, <a href=\"http://iopscience.iop.org/article/10.1088/1748-9326/11/9/094009" target=\"_blank\" >The Sower's way. Quantifying the Narrowing Net-Energy Pathways to a Global Energy Transition</a>, 2016, Env. Res. Let.</p>\n",
     "<h2>Models</h2>  \n",
     "<p>\n",
     "<div style=\"display:block;overflow: hidden;white-space: nowrap;\"><span style=\"float:left;\">SET Model 1.0&nbsp;|&nbsp;<a href=\"http://set.csaladen.es/set.html\" target=\"_blank\" >Online simulator</a>&nbsp;|&nbsp;<a href=\"http://set.csaladen.es/models/set.zip\" target=\"_blank\" >source file</a></span></div>\n",
