--- a/description.ipynb
+++ b/description.ipynb
@@ -9,9 +9,9 @@
     "<h2>Presentations</h2>\n",
     "<table style=\"border:none;\">\n",
     "    <tr style=\"border:none;\">\n",
-    "        <td style=\"border:none;\"><a href=\"https://docs.google.com/file/d/0B-5yijFzzgfgNGJlMXQ5ZEJCTWc/edit\" target=\"_blank\"><img style=\"height:200px\" src=\"img/pres1.jpg\"></a></td>\n",
-    "        <td style=\"border:none;\"><a href=\"http://www.csaladen.es/doc/Sgouridis_Csala_IEW_2015_v3.pptx\" target=\"_blank\"><img style=\"height:200px\" src=\"img/pres2.jpg\"></a></td>\n",
-    "        <td style=\"border:none;\"><a href=\"http://www.csaladen.es/doc/Denes_PhD_Qual2.pptx\" target=\"_blank\"><img style=\"height:200px\" src=\"img/pres3.jpg\"></a></td>\n",
+    "        <td style=\"border:none;\"><a href=\"https://docs.google.com/file/d/0B-5yijFzzgfgNGJlMXQ5ZEJCTWc/edit\" target=\"_blank\"><img style=\"height:200px\" src=\"https://set.csaladen.es/img/pres1.jpg\"></a></td>\n",
+    "        <td style=\"border:none;\"><a href=\"http://www.csaladen.es/doc/Sgouridis_Csala_IEW_2015_v3.pptx\" target=\"_blank\"><img style=\"height:200px\" src=\"https://set.csaladen.es/img/pres2.jpg\"></a></td>\n",
+    "        <td style=\"border:none;\"><a href=\"http://www.csaladen.es/doc/Denes_PhD_Qual2.pptx\" target=\"_blank\"><img style=\"height:200px\" src=\"https://set.csaladen.es/img/pres3.jpg\"></a></td>\n",
     "    </tr>\n",
     "    <tr style=\"border:none;\">\n",
     "        <td style=\"text-align:center;border:none;\" ><a href=\"https://docs.google.com/file/d/0B-5yijFzzgfgNGJlMXQ5ZEJCTWc/edit\" target=\"_blank\">Avoiding the Energy Trap: Guidelines<br> for a Sustainable Energy Transition</a></td>\n",
