--- a/ccs/eroei-ccs-workbook.ipynb
+++ b/ccs/eroei-ccs-workbook.ipynb
@@ -70,8 +70,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section reproduces all the equations presented in the paper (supplementary material). This is just for easier visual guidance and for quick checking."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 604,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +93,7 @@
        "         E_in"
       ]
      },
-     "execution_count": 550,
+     "execution_count": 604,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 605,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +121,7 @@
        "        E_OM + E_cap + E_f"
       ]
      },
-     "execution_count": 551,
+     "execution_count": 605,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 606,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +147,7 @@
        "E_in = E_cap⋅(L⋅s_OM + 1) + E_f"
       ]
      },
-     "execution_count": 552,
+     "execution_count": 606,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +173,7 @@
        "E_out = L⋅P⋅cf"
       ]
      },
-     "execution_count": 553,
+     "execution_count": 607,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +199,7 @@
        "E_out = E_el"
       ]
      },
-     "execution_count": 554,
+     "execution_count": 608,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 609,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +227,7 @@
        "         η   "
       ]
      },
-     "execution_count": 555,
+     "execution_count": 609,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 610,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +256,7 @@
        "      EROEI_th"
       ]
      },
-     "execution_count": 556,
+     "execution_count": 610,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 611,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 612,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +302,7 @@
        "                                  EROEI_th⋅η"
       ]
      },
-     "execution_count": 558,
+     "execution_count": 612,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 613,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +330,7 @@
        "            E_cap⋅(f_cap + 1)⋅(L⋅s_OM + 1) + E_f"
       ]
      },
-     "execution_count": 559,
+     "execution_count": 613,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 614,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +358,7 @@
        "                    E_cap⋅(f_cap + 1)⋅(L⋅s_OM + 1) + E_f       "
       ]
      },
-     "execution_count": 560,
+     "execution_count": 614,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 615,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +386,7 @@
        "    E_cap⋅(L⋅s_OM + 1)"
       ]
      },
-     "execution_count": 561,
+     "execution_count": 615,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 616,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +414,7 @@
        "                     R + f_cap + 1          "
       ]
      },
-     "execution_count": 562,
+     "execution_count": 616,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,8 +425,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have made a major simplifaction step from _Eq. S5_ to reach _Eq. S6_. Here we prove by symbolic evaluation of the subtituted expressions that we were correct."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 620,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +448,7 @@
        "                    E_cap⋅(f_cap + 1)⋅(L⋅s_OM + 1) + E_f        "
       ]
      },
-     "execution_count": 563,
+     "execution_count": 620,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 621,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +474,7 @@
        "                    E_cap⋅(f_cap + 1)⋅(L⋅s_OM + 1) + E_f        "
       ]
      },
-     "execution_count": 564,
+     "execution_count": 621,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 622,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +494,7 @@
        "True"
       ]
      },
-     "execution_count": 565,
+     "execution_count": 622,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,12 +515,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the formula in Eq.4 and the plant values from the Table S1 calculate the $EROEI_{el}$ for all capacity factors $CF$s between 50 and 90. We then use these values as a proxy to create an a adjustment factor for the $EROEI_{el}$ due to the indirect effect of the change of the capacity factor."
+    "In this part we show you how to reproduce the graphs presented in the paper, which form the basis of our results discussion and conclusions. There is a similar section for the _Renewables_ part. First, we illustrate a representative range for _CCS_ operational parameters for a number of fossil fuel plants. We then take note of the _min_ and _max_ ranges and plot the values alongside those obtained from the _Renewables_ part. The calculations are based on actual power plant data, stored in the _Excel_ file `plants.xlsx`, found in the project folder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the formula in Eq.4 and the plant values from the Table S1 (reproduced from `plants.xlsx`) calculate the $EROEI_{el}$ for all capacity factors $CF$s between 50 and 90. We then use these values as a proxy to create an a adjustment factor for the $EROEI_{el}$ due to the indirect effect of the change of the capacity factor. The same is true for the _operational versus capital energy investment ratio_, $R$. We therefore created capacity-factor adjusted values for $R$ as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to manipulate the _Excel_ file on the fly, we use a _python_ module called `xlwings`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 626,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,8 +543,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a function `eroei_r_getter` which takes as parameters the capacity factor $CF$ and the $EROEI_{fuel}$ for the two studies fossil fuels, _Coal_ and _Natural Gas_. Then, this function sets the correct $CF$ and $EROEI_{fuel}$ values in the _Excel_ workbook, which then recalculates the resulting $EROEI_{el}$ and $R$ values. Since we have 3 _IGCC Coal_, 2 _Pulverized Coal_ and 1 _NGCC Gas_ plant, we average over $EROEI_{el}$ and $R$ values within each group. The resulting _pandas dataframe_ is returned by the function, which now contains 3 columns `['IGCC','PC','NGCC']` and 2 rows `['EROEI_el','R']`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 627,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 628,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +624,7 @@
        "R          1.5745  2.06751  2.91996"
       ]
      },
-     "execution_count": 568,
+     "execution_count": 628,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,8 +634,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create reasonable operating range for capacity factor $CF$ (%)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 629,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +655,7 @@
        "[50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100]"
       ]
      },
-     "execution_count": 569,
+     "execution_count": 629,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,8 +666,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell is just an illustration of the pseudo-linear relationship between $CF$ and $EROEI_{el}$ (top row) and $R$ (bottom row), respectively. Note that the relationship is also nonlinear with regards to $EROEI_{fuel}$ (left vs. right column)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 630,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to create a energy penalty conversion ratio for the Capture ratio $CR$. We use the Energy penalty figure S1. We then use this value to adjust the fvalue of the operational energy penalty $f_{op}$."
+    "We need to create a energy penalty conversion ratio for the Capture Ratio $CR$. We use the _Energy penalty_ figure _Fig. S1_ from the supplementary material. We then use this value to adjust the value of the operational energy penalty $f_{op}$. All this means that a higher Capture Ratio $CR$ lowers $EROEI_{CCS}$ more - and we would like to create a measure about how much. We use the middle solid black line, linear approximation from the plot."
    ]
   },
   {
@@ -685,8 +734,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will only test Capture Ratios $CR$ of $60$ and $90$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": 631,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +755,7 @@
        "[1, 0.661016949153]"
       ]
      },
-     "execution_count": 571,
+     "execution_count": 631,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,27 +770,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define $EROEI_{CCS}$ calcuator function `eroei_ccs_cycler`, including minimums and maximums over $f_{op}$ and $f_{cap}$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 572,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['NGCC\\nGas', 'Pulverized\\nCoal', 'IGCC\\nCoal']"
-      ]
-     },
-     "execution_count": 572,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "names"
+    "Create a simple fuel name convereter function."
    ]
   },
   {
@@ -748,6 +784,21 @@
     "    elif fuel=='IGCC\\nCoal': return 'IGCC'\n",
     "    elif fuel=='Pulverized\\nCoal': return 'PC'\n",
     "    else: return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define $EROEI_{CCS}$ calcuator function `eroei_ccs_cycler`, including minimums and maximums over $f_{op}$ and $f_{cap}$. This function taks as input:\n",
+    "- an array `names`, which holds the fossil fuel type names\n",
+    "- their $EROEI_{fuel}$s, same length, in the same order\n",
+    "- $f$ extent envelopes `t0s` in the format [_min_ $f_{op}$,_max_ $f_{op}$, _min_ $f_{cap}$,_max_ $f_{cap}$], with this array repreated for each `name`\n",
+    "- Capacity Factor $CF$ array - of any length, percentage values between $50$ and $100$, increments of $5$.\n",
+    "- Cpature Ratio $CR$ array - of any length - but only defined for percentage values $60$ and $90$ need to define other levels using _Fig. S1_ if using differenet values.\n",
+    "- Ranges of any length for percentage values $f_{op}$ and $f_{cap}$. Values between $0$ and $200$, any increment.  \n",
+    "\n",
+    "The function will iterate over all inputs and return 4 multidimensional variables. First, uisng the `eroei_r_getter`, the function will calculate the corresponding $EROEI_{el}$ and $R$ to the $CF$ and $EROEI_{fuel}$ input. Then it will calculate $EROEI_{CCS}$ using _Eq. S6_, for all variable ranges. The `t0x` inner loop keeps track of the _minimums_ and _maximums_. Finally, it returns the calculated 2-dimensional arrays $EROEI_{el}$ and $R$ in `eroei_el_cf` and `R_cf`, and multidimensional arrays `eroei_ccs`, `eroei_ccs_min`, `eroei_ccs_max`, holdig the actual values, the _minimums_ and the _maximums_ for $EROEI_{CCS}$."
    ]
   },
   {
@@ -800,12 +851,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Different style plot with actual EROEI values on the color maps, and also display _min_ and _max_ values for the $EROEI_{CCS}$."
+    "having set up the `eroei_ccs_cycler` function, we define our desired simulation ranges and run it. We also display _min_ and _max_ values for the $EROEI_{CCS}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 632,
    "metadata": {},
    "outputs": [
     {
@@ -832,15 +883,15 @@
    ],
    "source": [
     "#Simulation options\n",
-    "fop=np.linspace(5,40,100)\n",
-    "fcap=np.linspace(10,120,100)\n",
-    "CF=[55,85]\n",
+    "fop=np.linspace(5,40,100) #in %\n",
+    "fcap=np.linspace(10,120,100) #in %\n",
+    "CF=[55,85] #in %\n",
     "title=u'$EROEI_{CCS}$ comparison for Coal and Gas'\n",
-    "#eroei_els=[30,13,13] #varies by name\n",
-    "#eroei_els=[32.4,14.3,12.25] #100% CF value from the CF converstion table\n",
-    "eroei_fuels=[87,58,58] #100% CF value from the CF converstion table\n",
+    "#eroei_els=[30,13,13] #deprecated, varies by name\n",
+    "#eroei_els=[32.4,14.3,12.25] #deprecated, 100% CF value from the CF converstion table\n",
+    "eroei_fuels=[87,58,58]\n",
     "names=['NGCC\\nGas','Pulverized\\nCoal','IGCC\\nCoal'] \n",
-    "t0s=[[12,20,58,110],[17,31,45,95],[15,28,23,40]]  # [fop range [min,max], fcap] by each name\n",
+    "t0s=[[12,20,58,110],[17,31,45,95],[15,28,23,40]]  # [fop min, fop max, fcap min fcap max] by each name, in %\n",
     "\n",
     "eroei_el_cf, R_cf, eroei_ccs, eroei_ccs_min, eroei_ccs_max=eroei_ccs_cycler(names, eroei_fuels, t0s, CF, CR_ratio, fop, fcap, verbose=True)"
    ]
