--- a/ccs/eroei-ccs-workbook.ipynb
+++ b/ccs/eroei-ccs-workbook.ipynb
@@ -2716,7 +2716,7 @@
     "axes[0][0].legend(loc=(0.03,0.52),framealpha=0,fontsize=11)  \n",
     "        \n",
     "plt.suptitle('Comparison of adjusted EROEIs for \\nfossil fuels with carbon-capture and storage $EROEI_{CCS}$ and \\ndispatchable renewables with energy storage $EROEI_{disp}$',y=1.03,fontsize=13)\n",
-    "plt.savefig('plot/fig4_annotated.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/S4.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
@@ -2795,7 +2795,7 @@
     "axes[0][0].legend(loc=(0.03,0.52),framealpha=0,fontsize=11)  \n",
     "        \n",
     "plt.suptitle('Comparison of adjusted EROEIs for \\nfossil fuels with carbon-capture and storage $EROEI_{CCS}$ and \\ndispatchable renewables with energy storage $EROEI_{disp}$',y=1.03,fontsize=13)\n",
-    "plt.savefig('plot/fig4_annotated2.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
+    "plt.savefig('plot/S5.png',dpi=150,bbox_inches = 'tight', pad_inches = 0.1)\n",
     "plt.show()"
    ]
   },
