updates descriptions to final

--- a/ccs/eroei-ccs-workbook.ipynb
+++ b/ccs/eroei-ccs-workbook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dispatchable Scalable Renewable Electricity Exhibits Higher Energy Return on Investment than Carbon Capture and Storage Under Realistic Conditions \n",
+    "# Scalable Renewable Electricity Exhibits Higher Energy Return on Investment than Carbon Capture and Storage Under Realistic Conditions \n",
     "*Sgouridis, Carbajales-Dale, Csala, Chiesa, Bardi*"
    ]
   },
@@ -13,6 +13,17 @@
    "metadata": {},
    "source": [
     "Use this Jupyter workbook to reproduce all results presented in the paper."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Paper GitHub folder](https://github.com/csaladenes/sustainable-energy-transitions/ccs)  \n",
+    "[Parent project GitHub repository](https://github.com/csaladenes/sustainable-energy-transitions)  \n",
+    "[This workbook for machine reading on GitHub](https://github.com/csaladenes/sustainable-energy-transitions/blob/master/ccs/eroei-ccs-workbook.ipynb)  \n",
+    "[This workbook for human reading on nbviewever](nbviewer.jupyter.org/github/csaladenes/sustainable-energy-transitions/blob/master/ccs/eroei-ccs-workbook.ipynb)  \n",
+    "[High-resolution plots folder](https://github.com/csaladenes/sustainable-energy-transitions/tree/master/ccs/plot)"
    ]
   },
   {
@@ -2962,6 +2973,13 @@
    "metadata": {},
    "source": [
     "### Auxiliary plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we create _Figure S2._ First, we read in the capacity factors for the years 2005 and 2015 of all _Coal_ and _Gas_ power plants in the _US_. We then produce 4 vertical histograms, for each fuel source and each year. We then calculate the _mean_ of these distributions to yield the  _mean capacity factor_ per fuel, per year. Please note that due to the structure of the data, this is not a weighted value by plant capacity or yearly generated energy - all plants of all sizes have the same weight in the mean."
    ]
   },
   {
